--- a/HelloXamarinFormsWorld.Android/Properties/AndroidManifest.xml
+++ b/HelloXamarinFormsWorld.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.company.myWesternPackageName">
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="23" />
-	<application android:icon="@drawable/icon">
-	</application>
+	<application android:icon="@drawable/icon"></application>
 </manifest>
